RepoBiteCoFinal/biteco_fixed/Terraform/modules/sg/main.tf
# modules/sg/main.tf
variable "vpc_id"  { type = string }
variable "project" { type = string }

resource "aws_security_group" "biteco" {
  name        = "${var.project}-sg"
  description = "Security Group Bite.Co Sprint 2"
  vpc_id      = var.vpc_id

  ingress { description = "SSH"             from_port = 22;   to_port = 22;   protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "HTTP Nginx"      from_port = 80;   to_port = 80;   protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "Django :8000"    from_port = 8000; to_port = 8000; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  # FIX: eliminado duplicado 8001 — Kong Admin y Django AWS comparten rango
  ingress { description = "Servicios 8001-8002" from_port = 8001; to_port = 8002; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "Kong Proxy"      from_port = 8080; to_port = 8080; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "Kong Admin"      from_port = 8088; to_port = 8088; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "Konga UI"        from_port = 1337; to_port = 1337; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "PostgreSQL"      from_port = 5432; to_port = 5432; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "Redis"           from_port = 6379; to_port = 6379; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }
  ingress { description = "Locust UI"       from_port = 8089; to_port = 8089; protocol = "tcp"; cidr_blocks = ["0.0.0.0/0"] }

  egress { from_port = 0; to_port = 0; protocol = "-1"; cidr_blocks = ["0.0.0.0/0"] }

  tags = { Name = "${var.project}-sg", Project = var.project }
}

output "sg_id" { value = aws_security_group.biteco.id }
